fix grid container for services | fix gap for form

--- a/main/css/style.css
+++ b/main/css/style.css
@@ -175,7 +175,6 @@ hr {
   font-weight: 500;
   font-size: 0.75rem;
   line-height: 0.9375rem;
-  padding: 0px 10px;
 }
 
 /* list for phone */
@@ -188,6 +187,8 @@ hr {
   position: relative;
   display: flex;
   align-items: center;
+  padding: 0px 10px;
+  white-space: nowrap;
 }
 
 .address__list>li::after {
@@ -259,6 +260,7 @@ hr {
   color: #000000;
   padding: 5px 10px;
   display: inline-flex;
+  white-space: normal;
 }
 
 .address__list:hover .sub-header__address {
@@ -949,7 +951,13 @@ hr {
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 }
 
-@media (max-width: 700px) {
+@media (max-width: 980px) {
+  .services-grid {
+    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+  }
+}
+
+@media (max-width: 740px) {
   .services-grid {
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   }
@@ -1173,6 +1181,12 @@ hr {
   -moz-column-gap: 20px;
   column-gap: 20px;
   row-gap: 30px;
+}
+
+@media(max-width:600px){
+  .footer__form-flex{
+    row-gap: 15px;
+  }
 }
 
 .form__name:focus,
